--- a/sections/exp_3/exp_3.html
+++ b/sections/exp_3/exp_3.html
@@ -224,16 +224,26 @@
     opacity: 0;
     max-height: 0;
     overflow: hidden;
-    transition: all 0.6s ease-in-out;
+    transition: opacity 0.6s ease-in-out, max-height 0.6s ease-in-out, margin 0.6s ease-in-out;
     margin-top: 0;
     margin-bottom: 0;
+    height: auto;
+  }
+
+  .exp-3-extra-images .exp-3-column {
+    height: auto;
+  }
+
+  .exp-3-extra-images .exp-3-card {
+    flex: 0 0 auto;
   }
 
   .exp-3-extra-images.show {
     opacity: 1;
-    max-height: 1000px;
+    max-height: 9999px;
     margin-top: var(--spacing-2xl);
     margin-bottom: var(--spacing-2xl);
+    overflow: visible;
   }
 
   /* 视频预览模态框 */
@@ -637,16 +647,16 @@
             Your browser does not support the video tag.
           </video>
         </div>
-      </div>
-
-      <!-- 第十列 -->
-      <div class="exp-3-column">
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
             <source src="assets/exp_3/videos/exp_3-video-25.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
+      </div>
+
+      <!-- 第十列 -->
+      <div class="exp-3-column">
         <div class="exp-3-card">
           <video class="exp-3-card-image" muted loop playsinline>
             <source src="assets/exp_3/videos/exp_3-video-26.mp4" type="video/mp4">
