--- a/sections/navigation/navigation.html
+++ b/sections/navigation/navigation.html
@@ -78,7 +78,7 @@
   position: relative;
   background: rgba(128, 128, 128, 0.15); /* 灰色半透明背景 */
   border: 1px solid rgba(128, 128, 128, 0.25);
-  border-radius: 6px;
+  border-radius: 999px; /* 始终保持圆角胶囊形状 */
   color: var(--color-text);
   font-weight: 500;
   /* 移除 backdrop-filter，避免与导航栏的 backdrop-filter 冲突 */
@@ -109,6 +109,7 @@
   z-index: -1;
   transition: opacity 0.3s ease; /* 明确指定过渡属性 */
   will-change: opacity; /* 提示浏览器优化此属性 */
+  border-radius: inherit;
   /* 使用 GPU 加速，创建独立渲染层 */
   transform: translate3d(0, 0, 0);
   -webkit-transform: translate3d(0, 0, 0);
@@ -280,10 +281,15 @@
   font-weight: 600;
   text-align: center;
   align-self: flex-start;
+  transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+  will-change: transform;
 }
 
 .dropdown-cta:hover {
   color: #FFFFFF !important;
+  background: #3A3A3A;
+  transform: translateY(-2px) scale(1.02);
+  box-shadow: 0 8px 20px rgba(0, 0, 0, 0.35);
 }
 
 /* 右侧横向图片 */
@@ -357,9 +363,10 @@
   height: 190px;
 }
 
-/* Solutions 卡片不显示副文字 */
-.solutions-cards .card-overlay p {
-  display: none;
+.solutions-cards .dropdown-card:hover {
+  transform: translateY(-8px) scale(1.03);
+  box-shadow: 0 14px 35px rgba(0, 0, 0, 0.35);
+  filter: brightness(1.05);
 }
 
 /* ===== Pricing 下拉面板专属样式 ===== */
@@ -399,11 +406,14 @@
   border-radius: 6px;
   overflow: hidden;
   cursor: pointer;
-  transition: transform 0.3s ease;
+  transition: transform 0.35s ease, box-shadow 0.35s ease, filter 0.35s ease;
+  will-change: transform;
 }
 
 .dropdown-card:hover {
-  transform: translateY(-4px);
+  transform: translateY(-8px) scale(1.03);
+  box-shadow: 0 14px 35px rgba(0, 0, 0, 0.35);
+  filter: brightness(1.05);
 }
 
 .dropdown-card img {
